--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<title>Login - Taler de Aplicaciones Web</title>
+	<title>Login - Taller de Aplicaciones Web</title>
     <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
        <h1>VideoTrend</h1></a>
        <h3>Mira tus videos de YouTube como quieras</h3>
    </header>
-   <nav><a href="" target="_blank">Crear tu cuenta</a>|
+   <nav><a href="" target="_blank">Crear una cuenta</a>|
     <a href="" target="_blank">Olvide mi contraseña</a>|
     <a href="" target="_blank">Acerca de Nosotros</a></nav>
    <div class="row login-row">
