--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
        <h1>VideoTrend</h1></a>
        <h3>Mira tus videos de YouTube como quieras</h3>
    </header>
-   <nav><a href="" target="_blank">Crear una cuenta</a>|
+   <nav><a href="registro.html" target="_blank">Crear una cuenta</a>|
     <a href="" target="_blank">Olvide mi contraseña</a>|
     <a href="" target="_blank">Acerca de Nosotros</a></nav>
    <div class="row login-row">
-        <article class="item">
+        <section class="item">
                 <form action="" method="post">
                     <div class="form-item">
                         <input id="email" type="email" required>
@@ -32,10 +32,12 @@
                 </form>
                 <div>
                     <hr>
-                    <a href="#"><button>Crear una cuenta</button></a>
+                    <a href="registro.html" target="_parent"><button>Crear una cuenta</button></a>
                 </div>
-            </article>
-        <aside class="item"></aside>
+            </section>
+        <aside class="item">
+            <img src="img/smartphone.png" alt="smartphone">
+        </aside>
     </div>  
    <footer><h2>YouTube - U.G.D. - Campus Virtual</h2></footer>
 </body>
