--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Login - Taller de Aplicaciones Web</title>
     <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css"> 
 </head>
 <body>
    <header>
@@ -12,9 +13,11 @@
        <h1>VideoTrend</h1></a>
        <h3>Mira tus videos de YouTube como quieras</h3>
    </header>
-   <nav><a href="registro.html" target="_blank">Crear una cuenta</a>|
-    <a href="" target="_blank">Olvide mi contraseña</a>|
-    <a href="" target="_blank">Acerca de Nosotros</a></nav>
+   <nav>
+        <a href="registro.html" target="_blank">Crear una cuenta</a>|
+        <a href="" target="_blank">Olvide mi contraseña</a>|
+        <a href="" target="_blank">Acerca de Nosotros</a>
+    </nav>
    <div class="row login-row">
         <section class="item">
                 <form action="" method="post">
@@ -34,7 +37,7 @@
                     <hr>
                     <a href="registro.html" target="_parent"><button>Crear una cuenta</button></a>
                 </div>
-            </section>
+        </section>
         <aside class="item">
             <img src="img/smartphone.png" alt="smartphone">
         </aside>
