--- a/registro.html
+++ b/registro.html
@@ -5,6 +5,7 @@
 	<title>Registro - Taller de Aplicaciones Web</title>
     <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">    
+    <link rel="stylesheet" type="text/css" href="css/registro.css">  
     </head>
     <body>
         <header>
