--- a/prueba.html
+++ b/prueba.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
     <link rel="stylesheet" type="text/css" href="css/prueba.css">
+    <link rel="icon" href="fabicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div class="contenedor">
@@ -59,6 +60,42 @@
                             <td>05/08/1994</td>
                             <td>m</td>
                             <td>3758-405436</td>
+                        </tr>
+                        <tr>
+                            <td>0002</td>
+                            <td>quirosjuan@hotmail.com.ar</td>
+                            <td>Tamara</td>
+                            <td>Prokopiw</td>
+                            <td>17/05/1995</td>
+                            <td>f</td>
+                            <td>3758-424188</td>
+                        </tr>
+                        <tr>
+                            <td>0003</td>
+                            <td>prueba@email.com.ar</td>
+                            <td>Leon</td>
+                            <td>Augusto</td>
+                            <td>14/11/2017</td>
+                            <td>m</td>
+                            <td>3758-424388</td>
+                        </tr>
+                        <tr>
+                            <td>0004</td>
+                            <td>alguien@email.com</td>
+                            <td>Nicolas</td>
+                            <td>Rodriguez</td>
+                            <td>12/01/1990</td>
+                            <td>m</td>
+                            <td>3758-405188</td>
+                        </tr>
+                        <tr>
+                            <td>0005</td>
+                            <td>root@debian.com</td>
+                            <td>Alejandra</td>
+                            <td>Gomez</td>
+                            <td>10/05/1987</td>
+                            <td>m</td>
+                            <td>3758-405632</td>
                         </tr>
                     </tbody>
                 </table>
