--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<title>Login - Taller de Aplicaciones Web</title>
-    <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
+    <link rel="icon" href="fabicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/login.css"> 
 </head>
