--- a/intro.html
+++ b/intro.html
@@ -20,6 +20,10 @@
                 </ol>
             </div>
         </div>
+        <div>
+            <p>EL trabajo se encuentra publicado en <a href="https://jquiros.000webhostapp.com/intro.html">https://jquiros.000webhostapp.com</a></p>
+            <p>El repositorio se encuentra publicado en <a href="https://github.com/juanquiros/tallerweb">GitHub</a></p>
+        </div>
     </div>
 </body>
 </html>
