--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
    <div class="row login-row">
         <section class="item">
-                <form action="" method="post">
+                <form action="#">
                     <div class="form-item">
                         <input id="email" type="email" required>
                         <label for="email">E-mail</label>
@@ -29,8 +29,9 @@
                         <input id="password" type="password" minlength="8" required>
                         <label for="password" >Contraseña</label>
                     </div>
+                    
                     <div class="form-item">
-                        <button type="submit">Iniciar Sesión</button>
+                        <button onclick="login()"  >Iniciar Sesión</button>
                     </div>
                 </form>
                 <div>
@@ -43,5 +44,6 @@
         </aside>
     </div>  
    <footer><h2>YouTube - U.G.D. - Campus Virtual</h2></footer>
+   <script src="js/eje_1_d.js"></script>
 </body>
 </html>
