tp2 eje 2 b-c y eje 3 a-b

--- a/prueba.html
+++ b/prueba.html
@@ -5,6 +5,7 @@
 	<title></title>
     <link rel="stylesheet" type="text/css" href="css/prueba.css">
     <link rel="icon" href="fabicon.ico" type="image/x-icon">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
 <body>
 	<div class="contenedor">
@@ -101,6 +102,69 @@
                 </table>
             </div>
         </div>
+        <hr>
+        <h1>Ejercicio tp2 -> 2 b</h1>
+        <div class="contenido-tabla">
+            <div class="item">
+                <table class="tabla">
+                    <caption>Usuario</caption>
+                    <thead>
+                        <tr>
+                            <th>id</th>
+                            <th>email</th>
+                            <th>nombre</th>
+                            <th>apellido</th>
+                            <th>fecha_nacimiento</th>
+                            <th>generofm</th>
+                            <th>telefono</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>0001</td><td>juanquiross@gmail.com</td><td>Juan</td><td>Quiros</td><td>05/08/1994</td><td>m</td><td>3758-405436</td>
+                        </tr>
+                        <tr>
+                            <td>0002</td>
+                            <td>quirosjuan@hotmail.com.ar</td>
+                            <td>Tamara</td>
+                            <td>Prokopiw</td>
+                            <td>17/05/1995</td>
+                            <td>f</td>
+                            <td>3758-424188</td>
+                        </tr>
+                        <tr>
+                            <td>0003</td>
+                            <td>prueba@email.com.ar</td>
+                            <td>Leon</td>
+                            <td>Augusto</td>
+                            <td>14/11/2017</td>
+                            <td>m</td>
+                            <td>3758-424388</td>
+                        </tr>
+                        <tr>
+                            <td>0004</td>
+                            <td>alguien@email.com</td>
+                            <td>Nicolas</td>
+                            <td>Rodriguez</td>
+                            <td>12/01/1990</td>
+                            <td>m</td>
+                            <td>3758-405188</td>
+                        </tr>
+                        <tr>
+                            <td>0005</td>
+                            <td>root@debian.com</td>
+                            <td>Alejandra</td>
+                            <td>Gomez</td>
+                            <td>10/05/1987</td>
+                            <td>m</td>
+                            <td>3758-405632</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <h2>Listar con jQuery</h2>
+        <ul id="ul-grupoLista"></ul>
     </div>
     <script src="js/eje_2_b.js"></script>
 </body>
