--- a/registro.html
+++ b/registro.html
@@ -4,8 +4,16 @@
         <meta charset="utf-8">
 	<title>Registro - Taller de Aplicaciones Web</title>
     <link rel="icon" href="img/fabicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="css/style.css">    
     <link rel="stylesheet" type="text/css" href="css/registro.css">  
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+   integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+   crossorigin=""/>
+   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+   integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+   crossorigin=""></script>
     </head>
     <body>
         <header>
@@ -22,28 +30,28 @@
                     <h2>Datos de Inicio de Sesión</h2>                    
                     <div class="form-item">
                         <label for="email">E-mail *</label>
-                        <input type="email" name="email" id="email" required>
+                        <input data-toggle="tooltip"  title="Ingrese su Email" type="email" name="email" id="email" required>
                     </div>
                     <div class="form-item">
                         <label for="password">Contraseña *</label>
-                        <input type="password" name="password" id="password" required>
+                        <input data-toggle="tooltip"  title="Ingrese su contraseña" type="password" name="password" id="password" required>
                     </div>
                     <div class="form-item">
                         <label for="re-password">Repetir Contraseña *</label>
-                        <input type="password" name="re-password" id="re-password" required>
+                        <input data-toggle="tooltip"  title="Repita su contraseña" type="password" name="re-password" id="re-password" required>
                     </div>
                     <h2>Datos Personales</h2>
                     <div class="form-item">
                         <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" id="nombre" maxlength="60">
+                        <input data-toggle="tooltip"  title="Ingrese su nombre" type="text" name="nombre" id="nombre" maxlength="60">
                     </div>
                     <div class="form-item">
                         <label for="apellido">Apellido</label>
-                        <input type="text" name="apellido" id="apellido" maxlength="60">
+                        <input data-toggle="tooltip"  title="Ingrese su apellido" type="text" name="apellido" id="apellido" maxlength="60">
                     </div>
                     <div class="form-item">
                         <label for="genero">Genero</label>
-                        <div id="genero">
+                        <div id="genero" data-toggle="tooltip"  title="Seleccione una opción">
                             <input type="radio" name="genero" id="femenino" value="Femenino">
                             <label for="femenino">Femenino</label>
                             <input type="radio" name="genero" id="masculino" value="Masculino">
@@ -52,57 +60,60 @@
                     </div>
                     <div class="form-item">
                         <label for="tel">Telefono</label>
-                        <input type="tel" name="tel" id="tel">
+                        <input data-toggle="tooltip"  title="Ingrese su Teléfono" type="tel" name="tel" id="tel">
                     </div>
                     <div class="form-item">
                         <label for="fecha_nacimiento">Fecha de Nacimiento</label>
-                        <input type="date" name="fecha_nacimiento" id="fecha_nacimiento">
+                        <input data-toggle="tooltip"  title="Ingrese su fecha de nacimiento" type="date" name="fecha_nacimiento" id="fecha_nacimiento">
                     </div>
                     <div class="form-item">
                         <label for="pagina_web">Página Web</label>
-                        <input type="url" name="pagina_web" id="pagina_web">
+                        <input data-toggle="tooltip"  title="Ingrese su página web" type="url" name="pagina_web" id="pagina_web">
                     </div>
                     <h2>Datos de localización</h2>
                     <div class="form-item">
                         <label for="pais">País</label>
-                       <select name="pais" id="pais">
+                       <select data-toggle="tooltip"  title="Seleccione su país" name="pais" id="pais">
                            <option value="Argentina" selected>Argentina</option>
                            <option value="Paraguay">Paraguay</option>
                        </select>
                     </div>
                     <div class="form-item">
                         <label for="provincia">Provincia/Estado</label>
-                        <select name="provincia" id="provincia">
+                        <select data-toggle="tooltip"  title="Seleccione su provincia"  name="provincia" id="provincia">
                             <option value="Misiones" selected>Misiones</option>
                             <option value="Corrientes">Corrientes</option>
                         </select>
                     </div>
                     <div class="form-item">
                         <label for="ciudad">Ciudad</label>
-                        <select name="ciudad" id="ciudad">
+                        <select data-toggle="tooltip"  title="Seleccione su ciudad"  name="ciudad" id="ciudad">
                             <option value="Apóstoles" selected>Apóstoles</option>
                             <option value="Posadas">Posadas</option>
                         </select>
                     </div>
                     <div class="form-item">
-                        <label for="calle">Calle</label>
-                        <input type="text" name="calle" id="calle">
+                        <label   for="calle">Calle</label>
+                        <input data-toggle="tooltip"  title="Ingrese su calle" type="text" name="calle" id="calle">
                     </div>
                     <div class="form-item">
                         <label for="altura">Altura (número)</label>
-                        <input type="number" name="altura" id="altura">
+                        <input data-toggle="tooltip"  title="Ingrese altura del domicilio" type="number" name="altura" id="altura">
                     </div>
                     <div class="form-item">
                         <label for="coordenadas">Coordenadas</label>
-                        <div id="coordenadas">
+                        <div id="coordenadas" data-toggle="tooltip"  title="Ingrese sus coordenadas">
                             <input type="number" name="lat" id="lat">
                             <label for="lat">Lat</label>
                             <input type="number" name="long" id="long">
                             <label for="long">Long</label>
                         </div>
                     </div>
+                    <div class="from-item">
+                        <div id="map"></div>
+                    </div>
                     <div class="form-item">
-                        <button>Crear mi cuenta</button>
+                        <button class="btn btn-outline-danger" >Crear mi cuenta</button>
                     </div>
                 </form>
             </section>
@@ -113,5 +124,11 @@
             </aside>
             </div>
             <footer><h2>YouTube - U.G.D. - Campus Virtual</h2></footer>
+
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            <script src="js/eje_3_a.js"></script>
+            
     </body>
 </html>
