--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="fabicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/login.css"> 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </head>
 <body>
    <header>
@@ -39,11 +40,12 @@
                     <a href="registro.html" target="_parent"><button>Crear una cuenta</button></a>
                 </div>
         </section>
-        <aside class="item">
-            <img src="img/smartphone.png" alt="smartphone">
+        <aside class="item" id="divImg" onclick="changeImg()">
+            <img id="image" src="img/smartphone.png" alt="smartphone">
         </aside>
     </div>  
    <footer><h2>YouTube - U.G.D. - Campus Virtual</h2></footer>
    <script src="js/eje_1_d.js"></script>
+   <script src="js/eje_2_c.js"></script>
 </body>
 </html>
