--- a/registro.html
+++ b/registro.html
@@ -8,12 +8,10 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">    
     <link rel="stylesheet" type="text/css" href="css/registro.css">  
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
-   integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
-   crossorigin=""/>
-   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
-   integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-   crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.umd.js"></script>
     </head>
     <body>
         <header>
@@ -73,41 +71,44 @@
                     <h2>Datos de localización</h2>
                     <div class="form-item">
                         <label for="pais">País</label>
-                       <select data-toggle="tooltip"  title="Seleccione su país" name="pais" id="pais">
+                       <select data-toggle="tooltip"  title="Seleccione su país" name="pais" id="pais" onchange="start()">
                            <option value="Argentina" selected>Argentina</option>
                            <option value="Paraguay">Paraguay</option>
                        </select>
                     </div>
                     <div class="form-item">
                         <label for="provincia">Provincia/Estado</label>
-                        <select data-toggle="tooltip"  title="Seleccione su provincia"  name="provincia" id="provincia">
+                        <select data-toggle="tooltip"  title="Seleccione su provincia"  name="provincia" id="provincia" onchange="start()">
                             <option value="Misiones" selected>Misiones</option>
                             <option value="Corrientes">Corrientes</option>
                         </select>
                     </div>
                     <div class="form-item">
                         <label for="ciudad">Ciudad</label>
-                        <select data-toggle="tooltip"  title="Seleccione su ciudad"  name="ciudad" id="ciudad">
-                            <option value="Apóstoles" selected>Apóstoles</option>
-                            <option value="Posadas">Posadas</option>
+                        <select data-toggle="tooltip"  title="Seleccione su ciudad"  name="ciudad" id="ciudad" onchange="start()">
+                            <option value="Apóstoles" >Apóstoles</option>
+                            <option value="Posadas" selected >Posadas</option>
                         </select>
                     </div>
                     <div class="form-item">
                         <label   for="calle">Calle</label>
-                        <input data-toggle="tooltip"  title="Ingrese su calle" type="text" name="calle" id="calle">
+                        <input data-toggle="tooltip" value="jauretche y lopez" title="Ingrese su calle" type="text" name="calle" id="calle" oninput ="start()">
                     </div>
                     <div class="form-item">
                         <label for="altura">Altura (número)</label>
-                        <input data-toggle="tooltip"  title="Ingrese altura del domicilio" type="number" name="altura" id="altura">
+                        <input data-toggle="tooltip"  title="Ingrese altura del domicilio" type="number" name="altura" id="altura" onchange ="start()">
                     </div>
                     <div class="form-item">
                         <label for="coordenadas">Coordenadas</label>
-                        <div id="coordenadas" data-toggle="tooltip"  title="Ingrese sus coordenadas">
-                            <input type="number" name="lat" id="lat">
+                        <div  id="coordenadas" data-toggle="tooltip"  title="Ingrese sus coordenadas" >
+                            <input type="number" name="lat" id="lat" readonly>
                             <label for="lat">Lat</label>
-                            <input type="number" name="long" id="long">
+                            <input type="number" name="long" id="long" readonly>
                             <label for="long">Long</label>
                         </div>
+                    </div>
+                    <div class="form-item">
+                        <button type="button" class="btn btn-sm btn-outline-success" onclick="obtenerUbicacion()">Obtener Ubicación</button>
                     </div>
                     <div class="from-item">
                         <div id="map"></div>
@@ -128,7 +129,7 @@
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-            <script src="js/eje_3_a.js"></script>
+            <script src="js/eje_3_b.js"></script>
             
     </body>
 </html>
