Ajax por POST del login de usuario

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/login.css"> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
 </head>
 <body>
    <header>
        <a href="/"><img src="img/VideoTrend.png" alt="VideoTrend">
        <h1>VideoTrend</h1></a>
        <h3>Mira tus videos de YouTube como quieras</h3>
+       
    </header>
    <nav>
         <a href="registro.html" target="_blank">Crear una cuenta</a>|
@@ -21,7 +23,7 @@
     </nav>
    <div class="row login-row">
         <section class="item">
-                <form action="#">
+                <form id="formLogin" onsubmit="login(event)">
                     <div class="form-item">
                         <input id="email" type="email" required>
                         <label for="email">E-mail</label>
@@ -32,7 +34,7 @@
                     </div>
                     
                     <div class="form-item">
-                        <button onclick="login()"  >Iniciar Sesión</button>
+                        <button type="submit" >Iniciar Sesión</button>
                     </div>
                 </form>
                 <div>
@@ -47,5 +49,6 @@
    <footer><h2>YouTube - U.G.D. - Campus Virtual</h2></footer>
    <script src="js/eje_1_d.js"></script>
    <script src="js/eje_2_c.js"></script>
+   <script src="js/eje_2_a.js"></script>   
 </body>
 </html>
